Prepare Sponge Nemo build for CloudLab